plugins {
    id 'org.springframework.boot' version '2.4.4'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'idea'
//    id 'war'
}

group = 'io.beka'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}
repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
//    Spring and Spring Boot dependencies
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.4'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
//    Databases
    runtimeOnly 'mysql:mysql-connector-java'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'


    implementation 'log4j:log4j:1.2.17'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'joda-time:joda-time:2.10.10'
//    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.modelmapper:modelmapper:2.4.0'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

//    caching
    implementation group: 'javax.cache', name: 'cache-api', version: '1.1.1'
    implementation group: 'org.ehcache', name: 'ehcache', version: '3.9.2'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    developmentOnly("org.springframework.boot:spring-boot-devtools")
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.2'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.projectlombok:lombok:1.18.20'
    testImplementation 'com.h2database:h2:1.4.200'
    implementation 'junit:junit:4.12'

}

test {
    useJUnitPlatform()
}
